virtual_chatbot/SchedulerParser.py
# Generated from Scheduler.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SchedulerParser ( Parser ):

    grammarFileName = "Scheduler.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\u00C4\u2018\u00E1\u00BA\u00B7t'", "'l\u00E1\u00BB\u2039ch'", 
                     "'l\u00C3\u00BAc'", "'cho'", "'ng\u00C3\u00A0y'", "'h\u00C3\u00B4m'", 
                     "'nay'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "TIME", "DATE", "TEXT", "WS" ]

    RULE_command = 0
    RULE_setEventCmd = 1
    RULE_getScheduleCmd = 2
    RULE_getDateCmd = 3
    RULE_time = 4
    RULE_date = 5

    ruleNames =  [ "command", "setEventCmd", "getScheduleCmd", "getDateCmd", 
                   "time", "date" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    TIME=8
    DATE=9
    TEXT=10
    WS=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setEventCmd(self):
            return self.getTypedRuleContext(SchedulerParser.SetEventCmdContext,0)


        def getScheduleCmd(self):
            return self.getTypedRuleContext(SchedulerParser.GetScheduleCmdContext,0)


        def getDateCmd(self):
            return self.getTypedRuleContext(SchedulerParser.GetDateCmdContext,0)


        def getRuleIndex(self):
            return SchedulerParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = SchedulerParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command)
        try:
            self.state = 15
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SchedulerParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 12
                self.setEventCmd()
                pass
            elif token in [SchedulerParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 13
                self.getScheduleCmd()
                pass
            elif token in [SchedulerParser.T__5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 14
                self.getDateCmd()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetEventCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def time(self):
            return self.getTypedRuleContext(SchedulerParser.TimeContext,0)


        def TEXT(self):
            return self.getToken(SchedulerParser.TEXT, 0)

        def getRuleIndex(self):
            return SchedulerParser.RULE_setEventCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetEventCmd" ):
                listener.enterSetEventCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetEventCmd" ):
                listener.exitSetEventCmd(self)




    def setEventCmd(self):

        localctx = SchedulerParser.SetEventCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_setEventCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.match(SchedulerParser.T__0)
            self.state = 18
            self.match(SchedulerParser.T__1)
            self.state = 19
            self.match(SchedulerParser.T__2)
            self.state = 20
            self.time()
            self.state = 21
            self.match(SchedulerParser.T__3)
            self.state = 22
            self.match(SchedulerParser.TEXT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GetScheduleCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def date(self):
            return self.getTypedRuleContext(SchedulerParser.DateContext,0)


        def getRuleIndex(self):
            return SchedulerParser.RULE_getScheduleCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGetScheduleCmd" ):
                listener.enterGetScheduleCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGetScheduleCmd" ):
                listener.exitGetScheduleCmd(self)




    def getScheduleCmd(self):

        localctx = SchedulerParser.GetScheduleCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_getScheduleCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(SchedulerParser.T__1)
            self.state = 25
            self.match(SchedulerParser.T__4)
            self.state = 26
            self.date()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GetDateCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SchedulerParser.RULE_getDateCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGetDateCmd" ):
                listener.enterGetDateCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGetDateCmd" ):
                listener.exitGetDateCmd(self)




    def getDateCmd(self):

        localctx = SchedulerParser.GetDateCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_getDateCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(SchedulerParser.T__5)
            self.state = 29
            self.match(SchedulerParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIME(self):
            return self.getToken(SchedulerParser.TIME, 0)

        def getRuleIndex(self):
            return SchedulerParser.RULE_time

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTime" ):
                listener.enterTime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTime" ):
                listener.exitTime(self)




    def time(self):

        localctx = SchedulerParser.TimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_time)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(SchedulerParser.TIME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATE(self):
            return self.getToken(SchedulerParser.DATE, 0)

        def getRuleIndex(self):
            return SchedulerParser.RULE_date

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDate" ):
                listener.enterDate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDate" ):
                listener.exitDate(self)




    def date(self):

        localctx = SchedulerParser.DateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_date)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(SchedulerParser.DATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





